--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
          <title>taylor's great website</title>
          <style>
     body {
-        background:blue
+        background:blue;
         color: rgb(45, 45, 45);
         padding: 10px;
         font-family: arial;
@@ -20,7 +20,7 @@
 
     /* navigation menu */
     nav {
-        background:blue;
+        background:black;
         margin: 0 auto;
         display: flex;
         padding: 10px;
@@ -45,7 +45,7 @@
 
     /* main container area beneath menu */
     main {
-        background:black
+        background:blue;
         display: flex;
     }
     .sidebar {
@@ -67,7 +67,8 @@
     <body>
        <div id=all-contents>
            <nav>
-                <header>Sheba's Glorious Website</header>
+                <header>Planet Hash Guerillaz
+                </header>
               <ul>
                   <li><a href="index.html">Home</a></a></li>
                   <li><a href="portfolio.html">Portfolio</a></li>
@@ -88,7 +89,7 @@
                      <header>Intersts</header>
                      <ul>
                          <li></1i>Music</li>
-                         <li>money </li>
+                         <li>Money </li>
                          <li>Clothes </li>
                      </ul>
                  </section>
